--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="alarm.h" />
     <ClInclude Include="autofire.h" />
     <ClInclude Include="named_pipe.h" />
+    <ClInclude Include="physics.h" />
     <ClInclude Include="tooltip.h" />
     <ClInclude Include="ui_bank.h" />
     <ClInclude Include="item_display.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="autofire.cpp" />
     <ClCompile Include="EqPackets.h" />
     <ClCompile Include="named_pipe.cpp" />
+    <ClCompile Include="physics.cpp" />
     <ClCompile Include="tooltip.cpp" />
     <ClCompile Include="ui_bank.cpp" />
     <ClCompile Include="item_display.cpp" />
