remove out of sync turning with keys add check for handles before looping pipe data add /timer and hotbutton hooks to support it

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="spellsets.h" />
     <ClInclude Include="string_util.h" />
     <ClInclude Include="ui_guild.h" />
+    <ClInclude Include="ui_hotbutton.h" />
     <ClInclude Include="ui_loot.h" />
     <ClInclude Include="ui_manager.h" />
     <ClInclude Include="ui_options.h" />
@@ -235,6 +236,7 @@
     <ClCompile Include="spellsets.cpp" />
     <ClCompile Include="string_util.cpp" />
     <ClCompile Include="ui_guild.cpp" />
+    <ClCompile Include="ui_hotbutton.cpp" />
     <ClCompile Include="ui_loot.cpp" />
     <ClCompile Include="ui_manager.cpp" />
     <ClCompile Include="ui_options.cpp" />
