re-enable target ring add non-crash exception filtering remove the empty callback in labels which causes a nullptr crash.

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -326,14 +326,14 @@
     <ClCompile Include="floating_damage.cpp">
       <Filter>Source Files\hooks</Filter>
     </ClCompile>
-    <ClCompile Include="directx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="target_ring.cpp">
       <Filter>Source Files\other</Filter>
     </ClCompile>
     <ClCompile Include="crash_handler.cpp">
       <Filter>Source Files\other</Filter>
+    </ClCompile>
+    <ClCompile Include="directx.cpp">
+      <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
