Add minizip to the project Zip up crashes for a cleaner way to send reports

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="crash_handler.h" />
     <ClInclude Include="directx.h" />
     <ClInclude Include="floating_damage.h" />
+    <ClInclude Include="miniz.h" />
     <ClInclude Include="named_pipe.h" />
     <ClInclude Include="physics.h" />
     <ClInclude Include="target_ring.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="directx.cpp" />
     <ClCompile Include="EqPackets.h" />
     <ClCompile Include="floating_damage.cpp" />
+    <ClCompile Include="miniz.c" />
     <ClCompile Include="named_pipe.cpp" />
     <ClCompile Include="physics.cpp" />
     <ClCompile Include="target_ring.cpp" />
