--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="floating_damage.h" />
     <ClInclude Include="miniz.h" />
     <ClInclude Include="named_pipe.h" />
+    <ClInclude Include="patches.h" />
     <ClInclude Include="physics.h" />
     <ClInclude Include="target_ring.h" />
     <ClInclude Include="tooltip.h" />
@@ -217,6 +218,7 @@
     <ClCompile Include="floating_damage.cpp" />
     <ClCompile Include="miniz.c" />
     <ClCompile Include="named_pipe.cpp" />
+    <ClCompile Include="patches.cpp" />
     <ClCompile Include="physics.cpp" />
     <ClCompile Include="target_ring.cpp" />
     <ClCompile Include="tooltip.cpp" />
