Update workflow (relocate xml, add crashes):
- Moved the xml to the destination folder path to ease installation
- Added the ZealCrashSender to the archive

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -65,7 +65,8 @@ jobs:
         env:
           ZIP_FILENAME:  ${{ steps.zip_filename.outputs.filename }}
         run: |
-          7z a -tzip $env:ZIP_FILENAME ./Release/Zeal.asi ./Release/Zeal.pdb ./Zeal/GameXML/EQUI_OptionsWindow.xml
+          7z a -tzip $env:ZIP_FILENAME ./Release/Zeal.asi ./Release/Zeal.pdb ./Zeal/GameXML/EQUI_OptionsWindow.xml ./Zeal/crashes
+          7z rn $env:ZIP_FILENAME EQUI_OptionsWindow.xml uifiles/default/EQUI_OptionsWindow.xml
 
       - name: Create a changelog since the last release tag
         id: changelog
