Add map labels support; sharpen position marker
- Modified the position marker so the directionality is
  more obvious
- Added map labels support and associated options window
  and command line control knobs
  - /map labels off,summmary,all
- DirectX 8 rendering of text is not very efficient, so there
  is a fps hit (especially for all), but there is zero
  penalty when off
- Added another keybind for toggling through label modes
  since it is useful to be able to toggle them on/off quickly
- DirectX drawtext required snprintf linkage so had to add
  legacy_stdio_definitions.lib to the project linker inputs

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -117,7 +117,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>winmm.lib;Dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;Dbghelp.lib;legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
