--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="crash_handler.h" />
     <ClInclude Include="directx.h" />
     <ClInclude Include="floating_damage.h" />
+    <ClInclude Include="ui_group.h" />
     <ClInclude Include="zone_map.h" />
     <ClInclude Include="miniz.h" />
     <ClInclude Include="named_pipe.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="directx.cpp" />
     <ClCompile Include="EqPackets.h" />
     <ClCompile Include="floating_damage.cpp" />
+    <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="zone_map.cpp" />
     <ClCompile Include="miniz.c" />
     <ClCompile Include="named_pipe.cpp" />
