--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="autofire.h" />
     <ClInclude Include="crash_handler.h" />
     <ClInclude Include="directx.h" />
+    <ClInclude Include="EntityManager.h" />
     <ClInclude Include="floating_damage.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="zone_map.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="autofire.cpp" />
     <ClCompile Include="crash_handler.cpp" />
     <ClCompile Include="directx.cpp" />
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="EqPackets.h" />
     <ClCompile Include="floating_damage.cpp" />
     <ClCompile Include="ui_group.cpp" />
