Move AddOutputText to the callback system Remove colorID from customfilter Add function to customfilters to check if it is handled Add pets and npc's to entity manager for easier lookup Update tell windows to use new AddOutputText callback Update zone_map to use GetPlayer  in entity manager Fix return on XMLRead in UIManager Modify chatfilter to use AddOutputText callback system

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="EntityManager.h">
       <Filter>Header Files\other</Filter>
     </ClInclude>
+    <ClInclude Include="chatfilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -391,6 +394,9 @@
     </ClCompile>
     <ClCompile Include="EntityManager.cpp">
       <Filter>Source Files\other</Filter>
+    </ClCompile>
+    <ClCompile Include="chatfilter.cpp">
+      <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
