--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -65,8 +65,7 @@ jobs:
         env:
           ZIP_FILENAME:  ${{ steps.zip_filename.outputs.filename }}
         run: |
-          7z a -tzip $env:ZIP_FILENAME ./Release/Zeal.asi ./Release/Zeal.pdb ./Zeal/GameXML/EQUI_OptionsWindow.xml ./Zeal/crashes README.md
-          7z rn $env:ZIP_FILENAME EQUI_OptionsWindow.xml uifiles/default/EQUI_OptionsWindow.xml
+          7z a -tzip $env:ZIP_FILENAME ./Release/Zeal.asi ./Release/Zeal.pdb ./Zeal/uifiles ./Zeal/crashes README.md
           7z rn $env:ZIP_FILENAME README.md Zeal_README.md
 
       - name: Create a changelog since the last release tag
