Add directx BitmapFont to accelerate text
- Added new BitmapFont class that supports faster DirectX 8
  text rendering by using bitmap font glyphs as textures in
  GPU batch processing (seeing negligible fps hit now)
- Added map support for BitmapFont including font selection
- Added some Arial spritefont sizes in uifiles/zeal/fonts
- Added some util classes in directx.h for stashing state
- Cleaned up map labels and added a '+' marker with label

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="chatfilter.h">
       <Filter>Header Files\hooks</Filter>
     </ClInclude>
+    <ClInclude Include="bitmap_font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -394,6 +397,9 @@
     </ClCompile>
     <ClCompile Include="chatfilter.cpp">
       <Filter>Source Files\hooks</Filter>
+    </ClCompile>
+    <ClCompile Include="bitmap_font.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
