--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClInclude Include="bitmap_font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="default_spritefont.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -399,6 +402,9 @@
       <Filter>Source Files\hooks</Filter>
     </ClCompile>
     <ClCompile Include="bitmap_font.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="default_spritefont.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
