--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="floating_damage.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="ui_inputdialog.h" />
+    <ClInclude Include="ZealSettings.h" />
     <ClInclude Include="zone_map.h" />
     <ClInclude Include="miniz.h" />
     <ClInclude Include="named_pipe.h" />
@@ -237,6 +238,7 @@
     <ClCompile Include="floating_damage.cpp" />
     <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="ui_inputdialog.cpp" />
+    <ClCompile Include="ZealSettings.cpp" />
     <ClCompile Include="zone_map.cpp" />
     <ClCompile Include="miniz.c" />
     <ClCompile Include="named_pipe.cpp" />
