--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="equip_item.h" />
     <ClInclude Include="floating_damage.h" />
     <ClInclude Include="json.hpp" />
+    <ClInclude Include="helm_manager.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="ui_inputdialog.h" />
     <ClInclude Include="ZealSettings.h" />
@@ -238,6 +239,7 @@
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="equip_item.cpp" />
     <ClCompile Include="floating_damage.cpp" />
+    <ClCompile Include="helm_manager.cpp" />
     <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="ui_inputdialog.cpp" />
     <ClCompile Include="zone_map.cpp" />
