--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="floating_damage.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="helm_manager.h" />
+    <ClInclude Include="music.h" />
     <ClInclude Include="ui_buff.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="ui_inputdialog.h" />
@@ -241,6 +242,7 @@
     <ClCompile Include="equip_item.cpp" />
     <ClCompile Include="floating_damage.cpp" />
     <ClCompile Include="helm_manager.cpp" />
+    <ClCompile Include="music.cpp" />
     <ClCompile Include="ui_buff.cpp" />
     <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="ui_inputdialog.cpp" />
