--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -258,6 +258,9 @@
     <ClInclude Include="music.h">
       <Filter>Header Files\hooks</Filter>
     </ClInclude>
+    <ClInclude Include="character_select.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="assist.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -444,12 +447,6 @@
       <Filter>Source Files\ui</Filter>
     </ClCompile>
     <ClCompile Include="music.cpp">
-      <Filter>Source Files\hooks</Filter>
-    </ClCompile>
-    <ClCompile Include="assist.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="tick.cpp">
       <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
