--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="ui_buff.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="ui_inputdialog.h" />
+    <ClInclude Include="ui_zoneselect.h" />
     <ClInclude Include="ZealSettings.h" />
     <ClInclude Include="zone_map.h" />
     <ClInclude Include="miniz.h" />
@@ -252,6 +253,7 @@
     <ClCompile Include="ui_buff.cpp" />
     <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="ui_inputdialog.cpp" />
+    <ClCompile Include="ui_zoneselect.cpp" />
     <ClCompile Include="zone_map.cpp" />
     <ClCompile Include="miniz.c" />
     <ClCompile Include="named_pipe.cpp" />
