--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="character_select.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui_zoneselect.h">
+      <Filter>Header Files\ui</Filter>
+    </ClInclude>
     <ClInclude Include="assist.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -447,6 +450,9 @@
       <Filter>Source Files\ui</Filter>
     </ClCompile>
     <ClCompile Include="music.cpp">
+      <Filter>Source Files\hooks</Filter>
+    </ClCompile>
+    <ClCompile Include="character_select.cpp">
       <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
