Add /assist failure option, bump to 0.6.5-alpha0
- Added a new zeal general tab option to detect /assist failures
  - clears target and emits warning
  - Also moved the /assist on/off out of cycle_target.cpp
- Also bumped version to 0.6.5-alpha0

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="alarm.h" />
+    <ClInclude Include="assist.h" />
     <ClInclude Include="autofire.h" />
     <ClInclude Include="bitmap_font.h" />
     <ClInclude Include="chatfilter.h" />
@@ -232,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="alarm.cpp" />
+    <ClCompile Include="assist.cpp" />
     <ClCompile Include="autofire.cpp" />
     <ClCompile Include="bitmap_font.cpp" />
     <ClCompile Include="chatfilter.cpp" />
