Remove both x64 and x86 debug configurations
- The x64 configurations make no sense for Zeal and the debug is
  not used so delete to simplify things
- Also fixed the README.md to point to the latest official release
  instead of the full list of releases to help out new users

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -461,6 +461,15 @@
     <ClCompile Include="survey.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="assist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ui_zoneselect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Zeal.rc">
